table layout issues

--- a/Frontend/angular14/src/app/layout/top-menu/top-menu.component.css
+++ b/Frontend/angular14/src/app/layout/top-menu/top-menu.component.css
@@ -5,14 +5,6 @@
   height: 100vh;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  flex-grow: 1;
-  overflow: auto;
-}
-
 #topbar {
   display: flex;
   flex-flow: row wrap;
